--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: nburat-d <nburat-d@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/02/23 16:20:24 by nburat-d          #+#    #+#              #
-#    Updated: 2022/03/03 11:52:19 by nburat-d         ###   ########.fr        #
+#    Updated: 2022/03/09 16:11:04 by nburat-d         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,6 +22,7 @@ SRCS = ./ft_atoi.c \
 	./ft_isdigit.c \
 	./ft_isprint.c \
 	./ft_islower.c \
+	./ft_iswhitespace.c \
 	./ft_isupper.c \
 	./ft_containchar.c \
 	./ft_memchr.c \
